[gd_scene load_steps=5 format=3 uid="uid://m0cybn0pcir0"]

[ext_resource type="Theme" uid="uid://dtl8jqt0k54ua" path="res://ui_theme.tres" id="1_xci41"]
[ext_resource type="Script" path="res://scripts/main_menu.gd" id="2_7jwrj"]

[sub_resource type="LabelSettings" id="LabelSettings_4smiy"]
font_size = 64

[sub_resource type="LabelSettings" id="LabelSettings_krhww"]
font_size = 32

[node name="Control" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_xci41")
script = ExtResource("2_7jwrj")

[node name="PanelContainer" type="PanelContainer" parent="."]
custom_minimum_size = Vector2(227.005, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -10.0
offset_top = -6.0
offset_right = 10.0
offset_bottom = 6.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2
alignment = 2

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "PAUSED"
label_settings = SubResource("LabelSettings_4smiy")
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="Label2" type="Label" parent="PanelContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Master:"

[node name="Label3" type="Label" parent="PanelContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Music:"

[node name="Label4" type="Label" parent="PanelContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "SFX:"

[node name="VBoxContainer2" type="VBoxContainer" parent="PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 1

[node name="VSlider" type="HSlider" parent="PanelContainer/VBoxContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 6
max_value = 1.0
step = 0.1
value = 1.0

[node name="VSlider2" type="HSlider" parent="PanelContainer/VBoxContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 6
max_value = 1.0
step = 0.1
value = 1.0

[node name="VSlider3" type="HSlider" parent="PanelContainer/VBoxContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 6
max_value = 1.0
step = 0.1
value = 1.0

[node name="Button" type="Button" parent="PanelContainer/VBoxContainer"]
visible = false
layout_mode = 2
text = "TOGGLE DEBUG"

[node name="Button3" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "RESET"

[node name="Button2" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "CREDITS"

[node name="PanelContainer2" type="PanelContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -10.0
offset_top = -6.0
offset_right = 10.0
offset_bottom = 6.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer2"]
layout_mode = 2
alignment = 2

[node name="Label" type="Label" parent="PanelContainer2/VBoxContainer"]
layout_mode = 2
text = "Made by @tutas
Gamejam entry for the olcCodejam2024.

Mouse SFX and Music by AniCator
Mouse Screaming by LoubiTek
Game Icons (1.0) by KenneyNL"
label_settings = SubResource("LabelSettings_krhww")
horizontal_alignment = 1

[node name="Button" type="Button" parent="PanelContainer2/VBoxContainer"]
layout_mode = 2
text = "QUIT"

[connection signal="value_changed" from="PanelContainer/VBoxContainer/HBoxContainer/VBoxContainer2/VSlider" to="." method="_on_v_slider_value_changed"]
[connection signal="value_changed" from="PanelContainer/VBoxContainer/HBoxContainer/VBoxContainer2/VSlider2" to="." method="_on_v_slider_2_value_changed"]
[connection signal="value_changed" from="PanelContainer/VBoxContainer/HBoxContainer/VBoxContainer2/VSlider3" to="." method="_on_v_slider_3_value_changed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/Button" to="." method="_on_debug_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/Button3" to="." method="_on_reset_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/Button2" to="." method="_on_credits_pressed"]
[connection signal="pressed" from="PanelContainer2/VBoxContainer/Button" to="." method="_on_close_credits_pressed"]
